--- a/_config.yml
+++ b/_config.yml
@@ -27,7 +27,7 @@ description: >- # used by seo meta and the atom feed
 
 # Fill in the protocol & hostname for your site.
 # E.g. 'https://username.github.io', note that it does not end with a '/'.
-url: "https://your-miro.github.io/"
+url: "https://your-miro.github.io"
 
 github:
   username: your-miro # change to your GitHub username
