--- a/_config.yml
+++ b/_config.yml
@@ -102,7 +102,7 @@ theme_mode: # [light | dark]
 cdn:
 
 # the avatar on sidebar, support local or CORS resources
-avatar: '![alt]({{ "/assets/img/kicad-hackrfone.jpg" | relative_url }})'
+avatar: /assets/img/IMG_7703.png
 
 # The URL of the site-wide social preview image used in SEO `og:image` meta tag.
 # It can be overridden by a customized `page.image` in front matter.
